parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    COMMENT_BLOCK
    COMPILER_DIRECTIVE
    RUNE

Grammar

Rule 0     S' -> program
Rule 1     program -> package imports statement
Rule 2     package -> PACKAGE ID
Rule 3     imports -> IMPORT STRING
Rule 4     imports -> IMPORT LPAREN import RPAREN
Rule 5     imports -> empty
Rule 6     import -> STRING import
Rule 7     import -> empty
Rule 8     statement -> function_statement statement
Rule 9     statement -> variable_global_statement statement
Rule 10    statement -> struct_statement statement
Rule 11    statement -> const statement
Rule 12    statement -> method_statement statement
Rule 13    statement -> interface_statement statement
Rule 14    statement -> type_alias statement
Rule 15    statement -> empty
Rule 16    type_alias -> TYPE ID types
Rule 17    interface_statement -> TYPE ID INTERFACE LBRACE method_list RBRACE
Rule 18    method_list -> ID LPAREN args RPAREN types method_list
Rule 19    method_list -> empty
Rule 20    method_statement -> FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN LBRACE content RBRACE
Rule 21    method_statement -> FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN TYPES LBRACE content RBRACE
Rule 22    const -> CONST LPAREN constant RPAREN
Rule 23    constant -> ID EQUAL value constant
Rule 24    constant -> empty
Rule 25    struct_statement -> TYPE ID STRUCT LBRACE field RBRACE
Rule 26    field -> ID types field
Rule 27    field -> empty
Rule 28    function_statement -> FUNC ID LPAREN args RPAREN types LBRACE content RBRACE
Rule 29    function_statement -> FUNC ID LPAREN args RPAREN LBRACE content RBRACE
Rule 30    function -> ID LPAREN parameters RPAREN
Rule 31    parameters -> expression
Rule 32    parameters -> CHAN TYPES
Rule 33    parameters -> expression COMMA parameters
Rule 34    parameters -> empty
Rule 35    args -> ID types
Rule 36    args -> ID CHAN ID
Rule 37    args -> ID CHAN ID COMMA args
Rule 38    args -> ID CHAN types
Rule 39    args -> ID CHAN types COMMA args
Rule 40    args -> ID types COMMA args
Rule 41    args -> ID COMMA args
Rule 42    args -> p_map_args COMMA args
Rule 43    args -> p_map_args
Rule 44    args -> empty
Rule 45    p_map_args -> ID POINTER brackets TYPES
Rule 46    brackets -> LBRACKET NUMBER RBRACKET brackets
Rule 47    brackets -> LBRACKET NUMBER RBRACKET
Rule 48    brackets -> LBRACKET STRING RBRACKET brackets
Rule 49    brackets -> LBRACKET STRING RBRACKET
Rule 50    brackets -> LBRACKET ID RBRACKET
Rule 51    brackets -> LBRACKET ID RBRACKET brackets
Rule 52    types -> TYPES
Rule 53    types -> array_statement
Rule 54    types -> pointer_statement
Rule 55    types -> slice_statement
Rule 56    types -> MAP LBRACKET TYPES RBRACKET
Rule 57    pointer_statement -> POINTER types
Rule 58    pointer_statement -> POINTER ID
Rule 59    array_statement -> LBRACKET NUMBER RBRACKET TYPES
Rule 60    array_statement -> LBRACKET NUMBER RBRACKET TYPES LBRACE values RBRACE
Rule 61    array_statement -> LBRACKET DOT DOT DOT RBRACKET TYPES
Rule 62    array_statement -> LBRACKET DOT DOT DOT RBRACKET TYPES LBRACE values RBRACE
Rule 63    slice_statement -> LBRACKET RBRACKET TYPES
Rule 64    slice_statement -> LBRACKET RBRACKET TYPES LBRACE values RBRACE
Rule 65    variable_global_statement -> VAR ID types
Rule 66    values -> value COMMA values
Rule 67    values -> value
Rule 68    values -> empty
Rule 69    content -> empty
Rule 70    content -> variable_statement content
Rule 71    content -> array_statement content
Rule 72    content -> callback content
Rule 73    content -> variable_redeclaration content
Rule 74    content -> if content
Rule 75    content -> for content
Rule 76    content -> BREAK content
Rule 77    content -> goroutine content
Rule 78    content -> increment content
Rule 79    content -> decrement content
Rule 80    content -> switch content
Rule 81    content -> ID channel content
Rule 82    content -> return content
Rule 83    content -> defer content
Rule 84    content -> continue content
Rule 85    content -> select content
Rule 86    content -> channel content
Rule 87    continue -> CONTINUE
Rule 88    channel -> CHANNEL_OP value
Rule 89    channel -> CHANNEL_OP ID
Rule 90    channel -> CHANNEL_OP callback
Rule 91    channel -> CHANNEL_OP struct_declaretion
Rule 92    lambda -> FUNC LPAREN args RPAREN types LBRACE content RBRACE
Rule 93    lambda -> FUNC LPAREN args RPAREN LBRACE content RBRACE
Rule 94    select -> SELECT LBRACE select_cases RBRACE
Rule 95    select_cases -> CASE expression COLON content select_cases
Rule 96    select_cases -> DEFAULT COLON content
Rule 97    select_cases -> empty
Rule 98    defer -> DEFER function
Rule 99    switch -> SWITCH ID LBRACE cases_value default RBRACE
Rule 100   switch -> SWITCH LBRACE cases_rel default RBRACE
Rule 101   cases_rel -> CASE case_condition COLON content cases_rel
Rule 102   cases_rel -> empty
Rule 103   case_condition -> ID REL_OP value
Rule 104   case_condition -> boolean
Rule 105   case_condition -> callback
Rule 106   default -> DEFAULT COLON content
Rule 107   default -> empty
Rule 108   cases_value -> CASE value COLON content cases_value
Rule 109   cases_value -> empty
Rule 110   goroutine -> GO callback
Rule 111   goroutine -> GO lambda LPAREN parameters RPAREN
Rule 112   if -> IF expression LBRACE content RBRACE else
Rule 113   else -> ELSE LBRACE content RBRACE
Rule 114   else -> ELSE if
Rule 115   else -> empty
Rule 116   expression -> value
Rule 117   expression -> LPAREN expression RPAREN
Rule 118   expression -> expression ARITH_OP expression
Rule 119   expression -> expression REL_OP expression
Rule 120   expression -> expression LOG_OP expression
Rule 121   expression -> expression POINTER expression
Rule 122   expression -> NOT expression
Rule 123   expression -> ID COLON_EQUAL channel
Rule 124   expression -> channel
Rule 125   expression -> increment
Rule 126   expression -> lambda
Rule 127   expression -> decrement
Rule 128   expression -> struct
Rule 129   expression -> callback
Rule 130   expression -> struct_declaretion
Rule 131   expression -> address_pointer
Rule 132   expression -> ID
Rule 133   expression -> map_statement
Rule 134   expression -> map
Rule 135   for -> FOR LBRACE content RBRACE
Rule 136   for -> FOR NOT ID LBRACE content RBRACE
Rule 137   for -> FOR expression LBRACE content RBRACE
Rule 138   for -> FOR for_declaration SEMICOLON expression SEMICOLON expression LBRACE content RBRACE
Rule 139   for -> FOR ID COMMA ID COLON_EQUAL RANGE ID LBRACE content RBRACE
Rule 140   for -> FOR UNDERSCORE COMMA ID COLON_EQUAL RANGE ID LBRACE content RBRACE
Rule 141   for -> FOR ID COLON_EQUAL RANGE ID LBRACE content RBRACE
Rule 142   for_declaration -> ID COLON_EQUAL NUMBER
Rule 143   map_statement -> MAP LBRACKET TYPES RBRACKET map_statement
Rule 144   map_statement -> MAP LBRACKET TYPES RBRACKET TYPES LBRACE map RBRACE
Rule 145   map_statement -> MAP LBRACKET TYPES RBRACKET TYPES
Rule 146   map -> empty
Rule 147   map -> LBRACE map RBRACE
Rule 148   map -> LBRACE map RBRACE COMMA map
Rule 149   map -> value COLON value
Rule 150   map -> value COLON value COMMA map
Rule 151   map -> value COLON map
Rule 152   map -> value COLON map COMMA map
Rule 153   return -> RETURN
Rule 154   return -> RETURN expression
Rule 155   return -> empty
Rule 156   struct_declaretion -> ID LBRACE struct_declaretion_values RBRACE
Rule 157   struct_declaretion_values -> values
Rule 158   struct_declaretion_values -> LBRACE struct_declaretion_values RBRACE
Rule 159   variable_statement -> VAR ID EQUAL slice_statement
Rule 160   variable_statement -> VAR ID EQUAL array_statement
Rule 161   variable_statement -> VAR ID types EQUAL expression
Rule 162   variable_statement -> VAR ID EQUAL expression
Rule 163   variable_statement -> VAR ID ID EQUAL expression
Rule 164   variable_statement -> ID map_position EQUAL expression
Rule 165   variable_statement -> ID COLON_EQUAL expression
Rule 166   variable_statement -> map_position COLON_EQUAL expression
Rule 167   variable_statement -> ID COLON_EQUAL slice_statement
Rule 168   variable_statement -> ID COLON_EQUAL array_statement
Rule 169   variable_statement -> VAR ID TYPES
Rule 170   map_position -> LBRACKET STRING RBRACKET map_position
Rule 171   map_position -> LBRACKET NUMBER RBRACKET map_position
Rule 172   map_position -> LBRACKET STRING RBRACKET
Rule 173   map_position -> LBRACKET NUMBER RBRACKET
Rule 174   variable_redeclaration -> ID EQUAL expression
Rule 175   variable_redeclaration -> ID ASSIGN_OP expression
Rule 176   variable_redeclaration -> ID DOT ID EQUAL expression
Rule 177   boolean -> FALSE
Rule 178   boolean -> TRUE
Rule 179   pointer -> ID LBRACKET NUMBER RBRACKET
Rule 180   pointer -> ID LBRACKET NUMBER COLON NUMBER RBRACKET
Rule 181   increment -> ID INCREMENT
Rule 182   decrement -> ID DECREMENT
Rule 183   address_pointer -> ADDRESS ID
Rule 184   struct -> ID DOT ID
Rule 185   struct -> ID DOT struct
Rule 186   callback -> function
Rule 187   callback -> ID DOT ID LPAREN ID LPAREN ID RPAREN RPAREN
Rule 188   callback -> function DOT callback
Rule 189   callback -> ID DOT callback
Rule 190   callback -> empty
Rule 191   value -> NUMBER
Rule 192   value -> STRING
Rule 193   value -> LBRACE values RBRACE
Rule 194   value -> map_varible
Rule 195   value -> boolean
Rule 196   value -> pointer
Rule 197   map_varible -> ID brackets
Rule 198   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 183
ARITH_OP             : 118
ASSIGN_OP            : 175
BREAK                : 76
CASE                 : 95 101 108
CHAN                 : 32 36 37 38 39
CHANNEL_OP           : 88 89 90 91
COLON                : 95 96 101 106 108 149 150 151 152 180
COLON_EQUAL          : 123 139 140 141 142 165 166 167 168
COMMA                : 33 37 39 40 41 42 66 139 140 148 150 152
COMMENT              : 
COMMENT_BLOCK        : 
COMPILER_DIRECTIVE   : 
CONST                : 22
CONTINUE             : 87
DECREMENT            : 182
DEFAULT              : 96 106
DEFER                : 98
DOT                  : 61 61 61 62 62 62 176 184 185 187 188 189
ELSE                 : 113 114
EQUAL                : 23 159 160 161 162 163 164 174 176
FALSE                : 177
FOR                  : 135 136 137 138 139 140 141
FUNC                 : 20 21 28 29 92 93
GO                   : 110 111
ID                   : 2 16 17 18 20 20 20 21 21 21 23 25 26 28 29 30 35 36 36 37 37 38 39 40 41 45 50 51 58 65 81 89 99 103 123 132 136 139 139 139 140 140 141 141 142 156 159 160 161 162 163 163 164 165 167 168 169 174 175 176 176 179 180 181 182 183 184 184 185 187 187 187 187 189 197
IF                   : 112
IMPORT               : 3 4
INCREMENT            : 181
INTERFACE            : 17
LBRACE               : 17 20 21 25 28 29 60 62 64 92 93 94 99 100 112 113 135 136 137 138 139 140 141 144 147 148 156 158 193
LBRACKET             : 46 47 48 49 50 51 56 59 60 61 62 63 64 143 144 145 170 171 172 173 179 180
LOG_OP               : 120
LPAREN               : 4 18 20 20 21 21 22 28 29 30 92 93 111 117 187 187
MAP                  : 56 143 144 145
NOT                  : 122 136
NUMBER               : 46 47 59 60 142 171 173 179 180 180 191
PACKAGE              : 2
POINTER              : 45 57 58 121
RANGE                : 139 140 141
RBRACE               : 17 20 21 25 28 29 60 62 64 92 93 94 99 100 112 113 135 136 137 138 139 140 141 144 147 148 156 158 193
RBRACKET             : 46 47 48 49 50 51 56 59 60 61 62 63 64 143 144 145 170 171 172 173 179 180
REL_OP               : 103 119
RETURN               : 153 154
RPAREN               : 4 18 20 20 21 21 22 28 29 30 92 93 111 117 187 187
RUNE                 : 
SELECT               : 94
SEMICOLON            : 138 138
STRING               : 3 6 48 49 170 172 192
STRUCT               : 25
SWITCH               : 99 100
TRUE                 : 178
TYPE                 : 16 17 25
TYPES                : 21 32 45 52 56 59 60 61 62 63 64 143 144 144 145 145 169
UNDERSCORE           : 140
VAR                  : 65 159 160 161 162 163 169
error                : 

Nonterminals, with rules where they appear

address_pointer      : 131
args                 : 18 20 21 28 29 37 39 40 41 42 92 93
array_statement      : 53 71 160 168
boolean              : 104 195
brackets             : 45 46 48 51 197
callback             : 72 90 105 110 129 188 189
case_condition       : 101
cases_rel            : 100 101
cases_value          : 99 108
channel              : 81 86 123 124
const                : 11
constant             : 22 23
content              : 20 21 28 29 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 92 93 95 96 101 106 108 112 113 135 136 137 138 139 140 141
continue             : 84
decrement            : 79 127
default              : 99 100
defer                : 83
else                 : 112
empty                : 5 7 15 19 24 27 34 44 68 69 97 102 107 109 115 146 155 190
expression           : 31 33 95 112 117 118 118 119 119 120 120 121 121 122 137 138 138 154 161 162 163 164 165 166 174 175 176
field                : 25 26
for                  : 75
for_declaration      : 138
function             : 98 186 188
function_statement   : 8
goroutine            : 77
if                   : 74 114
import               : 4 6
imports              : 1
increment            : 78 125
interface_statement  : 13
lambda               : 111 126
map                  : 134 144 147 148 148 150 151 152 152
map_position         : 164 166 170 171
map_statement        : 133 143
map_varible          : 194
method_list          : 17 18
method_statement     : 12
p_map_args           : 42 43
package              : 1
parameters           : 30 33 111
pointer              : 196
pointer_statement    : 54
program              : 0
return               : 82
select               : 85
select_cases         : 94 95
slice_statement      : 55 159 167
statement            : 1 8 9 10 11 12 13 14
struct               : 128 185
struct_declaretion   : 91 130
struct_declaretion_values : 156 158
struct_statement     : 10
switch               : 80
type_alias           : 14
types                : 16 18 26 28 35 38 39 40 57 65 92 161
value                : 23 66 67 88 103 108 116 149 149 150 150 151 152
values               : 60 62 64 66 157 193
variable_global_statement : 9
variable_redeclaration : 73
variable_statement   : 70

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . package imports statement
    (2) package -> . PACKAGE ID

    PACKAGE         shift and go to state 3

    program                        shift and go to state 1
    package                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> package . imports statement
    (3) imports -> . IMPORT STRING
    (4) imports -> . IMPORT LPAREN import RPAREN
    (5) imports -> . empty
    (198) empty -> .

    IMPORT          shift and go to state 5
    FUNC            reduce using rule 198 (empty -> .)
    VAR             reduce using rule 198 (empty -> .)
    TYPE            reduce using rule 198 (empty -> .)
    CONST           reduce using rule 198 (empty -> .)
    $end            reduce using rule 198 (empty -> .)

    imports                        shift and go to state 4
    empty                          shift and go to state 6

state 3

    (2) package -> PACKAGE . ID

    ID              shift and go to state 7


state 4

    (1) program -> package imports . statement
    (8) statement -> . function_statement statement
    (9) statement -> . variable_global_statement statement
    (10) statement -> . struct_statement statement
    (11) statement -> . const statement
    (12) statement -> . method_statement statement
    (13) statement -> . interface_statement statement
    (14) statement -> . type_alias statement
    (15) statement -> . empty
    (28) function_statement -> . FUNC ID LPAREN args RPAREN types LBRACE content RBRACE
    (29) function_statement -> . FUNC ID LPAREN args RPAREN LBRACE content RBRACE
    (65) variable_global_statement -> . VAR ID types
    (25) struct_statement -> . TYPE ID STRUCT LBRACE field RBRACE
    (22) const -> . CONST LPAREN constant RPAREN
    (20) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN LBRACE content RBRACE
    (21) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN TYPES LBRACE content RBRACE
    (17) interface_statement -> . TYPE ID INTERFACE LBRACE method_list RBRACE
    (16) type_alias -> . TYPE ID types
    (198) empty -> .

    FUNC            shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19
    CONST           shift and go to state 20
    $end            reduce using rule 198 (empty -> .)

    statement                      shift and go to state 8
    function_statement             shift and go to state 9
    variable_global_statement      shift and go to state 10
    struct_statement               shift and go to state 11
    const                          shift and go to state 12
    method_statement               shift and go to state 13
    interface_statement            shift and go to state 14
    type_alias                     shift and go to state 15
    empty                          shift and go to state 16

state 5

    (3) imports -> IMPORT . STRING
    (4) imports -> IMPORT . LPAREN import RPAREN

    STRING          shift and go to state 21
    LPAREN          shift and go to state 22


state 6

    (5) imports -> empty .

    FUNC            reduce using rule 5 (imports -> empty .)
    VAR             reduce using rule 5 (imports -> empty .)
    TYPE            reduce using rule 5 (imports -> empty .)
    CONST           reduce using rule 5 (imports -> empty .)
    $end            reduce using rule 5 (imports -> empty .)


state 7

    (2) package -> PACKAGE ID .

    IMPORT          reduce using rule 2 (package -> PACKAGE ID .)
    FUNC            reduce using rule 2 (package -> PACKAGE ID .)
    VAR             reduce using rule 2 (package -> PACKAGE ID .)
    TYPE            reduce using rule 2 (package -> PACKAGE ID .)
    CONST           reduce using rule 2 (package -> PACKAGE ID .)
    $end            reduce using rule 2 (package -> PACKAGE ID .)


state 8

    (1) program -> package imports statement .

    $end            reduce using rule 1 (program -> package imports statement .)


state 9

    (8) statement -> function_statement . statement
    (8) statement -> . function_statement statement
    (9) statement -> . variable_global_statement statement
    (10) statement -> . struct_statement statement
    (11) statement -> . const statement
    (12) statement -> . method_statement statement
    (13) statement -> . interface_statement statement
    (14) statement -> . type_alias statement
    (15) statement -> . empty
    (28) function_statement -> . FUNC ID LPAREN args RPAREN types LBRACE content RBRACE
    (29) function_statement -> . FUNC ID LPAREN args RPAREN LBRACE content RBRACE
    (65) variable_global_statement -> . VAR ID types
    (25) struct_statement -> . TYPE ID STRUCT LBRACE field RBRACE
    (22) const -> . CONST LPAREN constant RPAREN
    (20) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN LBRACE content RBRACE
    (21) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN TYPES LBRACE content RBRACE
    (17) interface_statement -> . TYPE ID INTERFACE LBRACE method_list RBRACE
    (16) type_alias -> . TYPE ID types
    (198) empty -> .

    FUNC            shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19
    CONST           shift and go to state 20
    $end            reduce using rule 198 (empty -> .)

    function_statement             shift and go to state 9
    statement                      shift and go to state 23
    variable_global_statement      shift and go to state 10
    struct_statement               shift and go to state 11
    const                          shift and go to state 12
    method_statement               shift and go to state 13
    interface_statement            shift and go to state 14
    type_alias                     shift and go to state 15
    empty                          shift and go to state 16

state 10

    (9) statement -> variable_global_statement . statement
    (8) statement -> . function_statement statement
    (9) statement -> . variable_global_statement statement
    (10) statement -> . struct_statement statement
    (11) statement -> . const statement
    (12) statement -> . method_statement statement
    (13) statement -> . interface_statement statement
    (14) statement -> . type_alias statement
    (15) statement -> . empty
    (28) function_statement -> . FUNC ID LPAREN args RPAREN types LBRACE content RBRACE
    (29) function_statement -> . FUNC ID LPAREN args RPAREN LBRACE content RBRACE
    (65) variable_global_statement -> . VAR ID types
    (25) struct_statement -> . TYPE ID STRUCT LBRACE field RBRACE
    (22) const -> . CONST LPAREN constant RPAREN
    (20) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN LBRACE content RBRACE
    (21) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN TYPES LBRACE content RBRACE
    (17) interface_statement -> . TYPE ID INTERFACE LBRACE method_list RBRACE
    (16) type_alias -> . TYPE ID types
    (198) empty -> .

    FUNC            shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19
    CONST           shift and go to state 20
    $end            reduce using rule 198 (empty -> .)

    variable_global_statement      shift and go to state 10
    statement                      shift and go to state 24
    function_statement             shift and go to state 9
    struct_statement               shift and go to state 11
    const                          shift and go to state 12
    method_statement               shift and go to state 13
    interface_statement            shift and go to state 14
    type_alias                     shift and go to state 15
    empty                          shift and go to state 16

state 11

    (10) statement -> struct_statement . statement
    (8) statement -> . function_statement statement
    (9) statement -> . variable_global_statement statement
    (10) statement -> . struct_statement statement
    (11) statement -> . const statement
    (12) statement -> . method_statement statement
    (13) statement -> . interface_statement statement
    (14) statement -> . type_alias statement
    (15) statement -> . empty
    (28) function_statement -> . FUNC ID LPAREN args RPAREN types LBRACE content RBRACE
    (29) function_statement -> . FUNC ID LPAREN args RPAREN LBRACE content RBRACE
    (65) variable_global_statement -> . VAR ID types
    (25) struct_statement -> . TYPE ID STRUCT LBRACE field RBRACE
    (22) const -> . CONST LPAREN constant RPAREN
    (20) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN LBRACE content RBRACE
    (21) method_statement -> . FUNC LPAREN ID ID RPAREN ID LPAREN args RPAREN TYPES LBRACE content RBRACE
    (17) interface_statement -> . TYPE ID INTERFACE LBRACE method_list RBRACE
    (16) type_alias -> . TYPE ID types
    (198) empty -> .

    FUNC            shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19
    CONST           shift and go to state 20
    $end            reduce using rule 198 (empty -> .)

    struct_statement               shift and go to state 11
    statement                      shift and go to state 25
    function_statement             shift and go to state 9
    variable_global_statement      shift and go to state 10
    const                          shift and go to state 12
    method_statement               shift and go to state 13
    interface_statement            shift and go to state 14
    type_alias                     shift and go to state 15
    empty                          shift and go to state 16

state 12
